--- a/src/components/detailPageSty.css
+++ b/src/components/detailPageSty.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 
 .blurImage {
     width: 100%;
@@ -169,6 +173,10 @@
     color: rgb(68, 183, 83);
 }
 
+.social-btns button{
+    margin: 0 0.2rem;
+}
+
 @keyframes gradient
  {
     0% {
@@ -192,7 +200,15 @@
 	}
 }
 
-@media screen and (max-width: 763px) {
+@media screen and (max-width: 1000px) {
+    .char-img-name-wrapper img{
+        width: 8rem;
+        height: 10rem;
+    }
+}
+
+
+@media screen and (max-width: 763px) { 
     .card-detail-wrapper {
         display: grid;
         grid-template-columns: 1fr 5fr;
@@ -206,6 +222,7 @@
         background: none;
         
     }
+
     .detail-card{
         height: 100%;
         place-content: center;
@@ -218,3 +235,35 @@
         font-size: 1.5rem;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .share-btn {
+        display: flex;
+        flex-direction: column;
+        border-left: none;
+    }
+    .share-btn p {
+        border-left: 2px solid rgb(68, 183, 83);
+        padding-left: 0.4rem;
+    }
+    .group-btn {
+        padding: 0.5rem 1rem;
+        border-radius: 1rem;
+        margin: 0 0.3rem;
+        font-size: 0.8rem;
+        font-weight: bold;
+    }
+    
+}
+
+@media screen and (max-width: 509px) {
+    .watch-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .group-btn {
+        margin-bottom: 0.3rem;
+    }
+}
+
